# tunneldesk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md
examples/: service-profiles.example.json
scripts/: build-linux-helper.mjs  dev.cmd  generate_app_icon.py
src/: App.vue  api.ts  components.d.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: com.tunneldesk.hosts.policy
src-tauri/src/: commands.rs  config.rs  credential.rs  error.rs  health.rs  hosts.rs  hosts_core.rs  lib.rs  main.rs  model.rs  privileged_hosts.rs  profile_transfer.rs  single_instance.rs  startup.rs  state.rs  tunnel.rs  validation.rs
src/app/providers/: AppProvider.vue  CloseRequestDialog.vue  StartupValidationDialog.vue  ToastBridge.vue  UnsavedProfilesDialog.vue
src/app/router/: index.ts  routes.ts
src/app/theme/: antdTheme.ts  useThemeMode.ts
src/features/diagnostics/: DiagnosticsPage.vue
src/features/diagnostics/components/: DiagnosticsPanel.vue  ServiceDiagnosticsList.vue  TunnelStatusList.vue
src/features/logs/: LogsPage.vue
src/features/overview/: OverviewPage.vue  overviewState.ts
src/features/overview/components/: MetricsGrid.vue  QuickActions.vue  ServiceStatusTable.vue  StatusHero.vue
src/features/services/: ServicesPage.vue
src/features/settings/: SettingsPage.vue
src/features/tunnels/: TunnelsPage.vue
src/layouts/: AppShell.vue  AppTitleBar.vue  SidebarNav.vue  TopBar.vue
src/shared/api/: commandError.ts  tauri.ts
src/shared/domain/: clipboard.ts  defaults.ts  normalize.ts  routeAction.ts  serviceStatus.ts  startupValidation.ts  tunnelFactory.ts  validators.ts
src/shared/types/: app.ts  backup.ts  index.ts  log.ts  profile.ts  status.ts  transfer.ts  tunnel.ts
src/shared/ui/: ActionBar.vue  AppMark.vue  CopyableDomain.vue  EmptyState.vue  PageHeader.vue  StatusTag.vue
src/stores/: appStore.ts  passwordStore.ts  updateStore.ts
src/styles/: base.css
src/tests/domain/: domain.test.ts  overviewState.test.ts  routeAction.test.ts  startupValidation.test.ts
src/tests/stores/: appStore.test.ts  updateStore.test.ts
(+13 files in other folders)
