[package]
name = "tunneldesk"
version = "0.1.0"
description = "A desktop SSH tunnel manager for development services"
authors = ["TunnelDesk contributors"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "tunneldesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
russh = { version = "0.60.3", default-features = false, features = ["flate2", "ring", "rsa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh-key = { package = "internal-russh-forked-ssh-key", version = "0.6.18" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
